--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -36,6 +36,7 @@
       href="https://cdn.jsdelivr.net/npm/admin-lte@4.0.0-beta3/dist/css/adminlte.min.css"
       crossorigin="anonymous"
     />
+    {% block extra_head %} {% endblock %}
     <!--end::Required Plugin(AdminLTE)-->
   </head>
   <!--end::Head-->
