--- a/templates/dashboard/publication_form.html
+++ b/templates/dashboard/publication_form.html
@@ -1,4 +1,9 @@
 {% extends "dashboard/private_base.html" %}
+{% load crispy_forms_tags %}
+
+{% block extra_head %}
+{{ form.media }}
+{% endblock %}
 
 {% block crumb %}
 {{ block.super }}
@@ -10,7 +15,7 @@
 {% block app_content %}
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
-  {{ form }}
+  {{ form|crispy }}
   <div class="d-flex justify-content-between mt-3">
     <a href="{% url 'dashboard:publication_detail' %}" class="btn btn-secondary">Voltar</a>
     <button type="submit" class="btn btn-primary">Salvar</button>
