--- a/templates/dashboard/private_base.html
+++ b/templates/dashboard/private_base.html
@@ -45,9 +45,14 @@
               <i class="bi bi-key-fill me-2"></i>
                 Alterar Senha</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="{% url 'account_logout' %}">
-              <i class="bi bi-power me-2"></i>Sair
-            </a></li>
+            <li>
+              <form action="{% url 'account_logout' %}" method="post">
+                {% csrf_token %}
+                <button class="dropdown-item" type="submit">
+                  <i class="bi bi-power me-2"></i>Sair
+                </button>
+              </form>
+            </li>
           </ul>
         </li>
         <!--end::User Menu Dropdown-->
