--- a/templates/dashboard/includes/sidebar.html
+++ b/templates/dashboard/includes/sidebar.html
@@ -8,6 +8,7 @@
         src="{{ publication.logo.url }}"
         alt="Logo"
         class="brand-image opacity-75 shadow"
+        style="filter: brightness(100);"
       />
       {% else %}
       <span class="brand-text fw-light">{{ publication.short_title }}</span>
