templates allauth internos

--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -86,6 +86,9 @@
         }
       });
     </script>
+    {% block extra_body %}
+      
+    {% endblock %}
     <!--end::OverlayScrollbars Configure-->
     <!--end::Script-->
   </body>
