--- a/templates/dashboard/profile_edit.html
+++ b/templates/dashboard/profile_edit.html
@@ -1,4 +1,5 @@
 {% extends "dashboard/private_base.html" %}
+{% load crispy_forms_tags %}
 
 {% block crumb %}
 {{ block.super }}
@@ -12,7 +13,7 @@
   <h2 class="mb-4">{{ user|capfirst }}</h2>
   <form action="" method="post">
     {% csrf_token %}
-    {{ form }}
+    {{ form|crispy }}
     <div class="d-flex justify-content-between mt-3">
       <a href="{% url 'dashboard:user_profile' %}" class="btn btn-secondary">Voltar</a>
       <button type="submit" class="btn btn-primary">Atualizar</button>
