--- a/templates/dashboard/includes/documents_table.html
+++ b/templates/dashboard/includes/documents_table.html
@@ -14,8 +14,8 @@
     <tr class="align-middle">
       <td>{{ document.id }}</td>
       <td>{{ document.title }}</td>
-      <td>{{ document.created_at|date }}</td>
-      <td>{{ document.updated_at|date }}</td>
+      <td>{{ document.created_at|date:"SHORT_DATE_FORMAT" }}</td>
+      <td>{{ document.updated_at|date:"SHORT_DATE_FORMAT" }}</td>
       <td>{{ document.is_published | yesno:"Sim,Não," }}</td>
       {% include "dashboard/includes/actions.html" with obj=document %}
     </tr>
