--- a/templates/dashboard/includes/issues_table.html
+++ b/templates/dashboard/includes/issues_table.html
@@ -5,6 +5,7 @@
       <th>Título</th>
       <th>Criação</th>
       <th>Alteração</th>
+      <th>Publicação</th>
       <th>Publicado?</th>
       <th>Ações</th>
     </tr>
@@ -14,8 +15,9 @@
     <tr class="align-middle">
       <td>{{ issue.id }}</td>
       <td>{{ issue.title }}</td>
-      <td>{{ issue.created_at|date }}</td>
-      <td>{{ issue.updated_at|date }}</td>
+      <td>{{ issue.created_at|date:"SHORT_DATE_FORMAT" }}</td>
+      <td>{{ issue.updated_at|date:"SHORT_DATE_FORMAT" }}</td>
+      <td>{{ issue.pub_date|date:"SHORT_DATE_FORMAT" }}</td>
       <td>{{ issue.is_published | yesno:"Sim,Não," }}</td>
       {% include "dashboard/includes/actions.html" with obj=issue %}
     </tr>
