--- a/templates/dashboard/includes/pages_table.html
+++ b/templates/dashboard/includes/pages_table.html
@@ -16,8 +16,8 @@
       <td>{{ page.id }}</td>
       <td>{{ page.title }}</td>
       <td>{{ page.order }}</td>
-      <td>{{ page.created_at|date }}</td>
-      <td>{{ page.updated_at|date }}</td>
+      <td>{{ page.created_at|date:"SHORT_DATE_FORMAT" }}</td>
+      <td>{{ page.updated_at|date:"SHORT_DATE_FORMAT" }}</td>
       <td>{{ page.is_published | yesno:"Sim,Não," }}</td>
       {% include "dashboard/includes/actions.html" with obj=page %}
     </tr>
