--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -21,20 +21,13 @@
       <span>{{ user.last_name }}</span>
     </div>
     <div class="d-flex justify-content-between py-2 border-bottom">
-      <strong>Email{{ user.emailaddress_set.all.count|pluralize }}</strong>
-      <span>
-        {% for email in user.emailaddress_set.all  %}
-          {{ email.email }}{% if not forloop.last %}, {% endif %}    
-        {% empty %}
-        -
-        {% endfor %}
-      </span>
+      <strong>Email</strong>
+      <span>{{ user.email }}</span>
     </div>
   </div>
 
   <div class="d-flex justify-content-between mt-3">
     <a href="{% url 'dashboard:index' %}" onclick="window.history.back(); return false;" class="btn btn-secondary">Voltar</a>
-    <a href="{% url 'account_email' %}" class="btn btn-primary">Alterar Emails</a>
     <a href="{% url 'dashboard:user_profile_change' %}" class="btn btn-primary" role="button">Atualizar Dados</a>
   </div>
 </div>
