ajuste no espaçamento

--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -96,10 +96,10 @@
             <p class="mb-0"><strong>{{ publication.title }}</strong></p>
             <p class="mb-0">{{ publication.organization }}</p>
             {% if publication.issn %}
-            <p><small>ISSN: {{ publication.issn }}</small></p>
+            <p class="mb-0"><small>ISSN: {{ publication.issn }}</small></p>
             {% endif %}
             {% if publication.doi %}
-            <p><small>DOI: {{ publication.doi }}</small></p>
+            <p class="mb-0"><small>DOI: {{ publication.doi }}</small></p>
             {% endif %}
           </div>
           <div class="col-md-5 ms-auto">
