--- a/templates/dashboard/private_base.html
+++ b/templates/dashboard/private_base.html
@@ -107,6 +107,16 @@
     <!--end::App Content-->
   </main>
   <!--end::App Main-->
+  <div id="modals-here"
+    class="modal fade"
+    style="display: none"
+    aria-hidden="false"
+    tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+      </div>
+    </div>
+  </div>
   <!--begin::Footer-->
   <footer class="app-footer">
     <!--begin::To the end-->
