--- a/templates/dashboard/delete.html
+++ b/templates/dashboard/delete.html
@@ -13,7 +13,7 @@
 
 
 {% block app_content %}
-  <p>Confirma a remoção de "{{ object }}"?</p>
+  <p>Remover "{{ object }}"?</p>
 
   <form method="post" c>
     {% csrf_token %}
