--- a/templates/dashboard/publication.html
+++ b/templates/dashboard/publication.html
@@ -26,7 +26,9 @@
 
   <div class="d-flex justify-content-between mt-3">
     <a href="{% url 'dashboard:index' %}" class="btn btn-secondary">Voltar</a>
+    {% if perms.app.change_publication %}
     <a href="{% url 'dashboard:publication_change' %}" class="btn btn-primary" role="button">Atualizar</a>
+    {% endif %}
   </div>
 </div>
 {% endblock %}
