--- a/app/templates/download_page.html
+++ b/app/templates/download_page.html
@@ -1,12 +1,29 @@
 <div class="list-group">
-  {% for document in content %}
+  {% for document in page_obj %}
   <div class="list-group-item bg-dark mb-2">
-    <a class="d-block text-light text-start text-decoration-none text-capitalize" href="{{ document.file.url }}" target="_blank">
-      <span class=" me-2"><i class="bi bi-download"></i></span>
-      {{ document.title }} - Atualizado em: {{ document.updated_at }}
+    <a class="d-flex justify-content-between text-light text-decoration-none" href="{{ document.file.url }}" target="_blank">
+      <span class="text-capitalize"><i class="bi bi-download me-2"></i>{{ document.title }}</span>
+      <span class="small text-secondary">Atualizado em {{ document.updated_at|date }}</span>
     </a>
   </div>
   {%empty%}
   <h1>EM BREVE</h1>
   {% endfor %}
 </div> 
+{% if paginator.num_pages > 1 %}
+<ul class="pagination justify-content-center mt-2">
+  <li class="page-item {{  page_obj.has_previous|yesno:',disabled,disabled'  }}">
+    <a class="page-link" href="{% if page_obj.has_previous %}{% querystring page=page_obj.previous_page_number %}{% endif %}" aria-label="Previous">
+      <span aria-hidden="true">&laquo;</span>
+    </a>
+  </li>
+  {% for page in paginator.page_range %}
+  <li class="page-item"><a class="page-link {% if page_obj.number == page %}active{% endif %}" href="{% querystring page=page %}">{{page}}</a></li>
+  {% endfor %}
+  <li class="page-item {{  page_obj.has_next|yesno:',disabled,disabled'  }}">
+    <a class="page-link" href="{% if page_obj.has_next %}{% querystring page=page_obj.next_page_number %}{% endif %}" aria-label="Previous">
+      <span aria-hidden="true">&raquo;</span>
+    </a>
+  </li>
+</ul>
+{% endif %}
