--- a/templates/cms/list.html
+++ b/templates/cms/list.html
@@ -1,4 +1,5 @@
 {% extends "cms/private_base.html" %}
+{% load render_table from django_tables2 %}
 
 {% block title %}{{ page_title }}{% endblock %}
 
@@ -20,26 +21,6 @@
 </div>
 {% endif %}
 
-<div class="table-responsive">
-  {% include table_template %}
-</div>
+{% render_table table %}
 
-{% if paginator.num_pages > 1 %}
-<ul class="pagination justify-content-center">
-  <li class="page-item {{  page_obj.has_previous|yesno:',disabled,disabled'  }}">
-    <a class="page-link" href="{% if page_obj.has_previous %}{% querystring page=page_obj.previous_page_number %}{% endif %}" aria-label="Previous">
-      <span aria-hidden="true">&laquo;</span>
-    </a>
-  </li>
-  {% for page in paginator.page_range %}
-  <li class="page-item"><a class="page-link {% if page_obj.number == page %}active{% endif %}" href="{% querystring page=page %}">{{page}}</a></li>
-  {% endfor %}
-  <li class="page-item {{  page_obj.has_next|yesno:',disabled,disabled'  }}">
-    <a class="page-link" href="{% if page_obj.has_next %}{% querystring page=page_obj.next_page_number %}{% endif %}" aria-label="Previous">
-      <span aria-hidden="true">&raquo;</span>
-    </a>
-  </li>
-</ul>
-{% endif %}
-  
 {% endblock %}
