--- a/static/css/main.css
+++ b/static/css/main.css
@@ -217,3 +217,33 @@ body.index .navbar-custom {
 body.single-page {
   padding-top: 4.5rem;
 }
+
+.ribbon {
+  position: fixed;
+  top: 240px;
+  right: -40px;
+  width: 400px;
+  background-color: rgba(255,12,12,0.7);
+  color: #ccc;
+  text-align: center;
+  font-weight: bold;
+  font-family: sans-serif;
+  padding: 0.5rem 0;
+  transform: rotate(45deg);
+  transform-origin: top right;
+  z-index: 9999;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  font-size: 1.5rem;
+  pointer-events: none;
+}
+
+@media (max-width: 480px) {
+  .ribbon {
+    width: 250px;
+    top: 150px;
+    right: -30px;
+    font-size: 1rem;
+    padding: 0.4rem 0;
+  }
+}
+
